Improve performance and browser resizing: Lite mode, edge resize, image caching
Co-Authored-By: Shiatora Ligion <shiatoraligion@gmail.com>